feat: core refactoring to handle extension provider